# novel-graph

./: .gitignore  .pre-commit-config.yaml  README.md  build_graph.py  chatgpt.ipynb  extract_relations.py  extract_relations.sh  generate.py  generate.sh  helpers.py  prompts.py  pyproject.toml
data/: char-desc.jsonl  char-rel.jsonl  conditional_mapping  karamazov_interactions.jsonl  wrong_nodes
data/100-years-of-solitude/: love.txt  nostalgia.txt  solitude.txt
data/brothers-karamazov/: data.json  graph.json  karamazov.json  karamazov.txt  name_mapping
data/master-and-margarita/: data.json  graph.json
data/one-hundred-years-of-solitude/: data.json  graph.json  relations.jsonl  solitude.json
data/war-and-peace/: war_and_peace.txt
data/war_and_peace/: graph.json
src/: build_graph.py  generate.py  helpers.py  parsers.py  prompts.py
