[project]
name = "novel-graph"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.8.0",
    "certifi==2025.1.31",
    "distro==1.9.0",
    "exceptiongroup==1.2.2",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httpx==0.28.1",
    "idna==3.10",
    "jiter==0.8.2",
    "mypy>=1.15.0",
    "numpy>=2.0.2",
    "openai==1.63.2",
    "pandas>=2.2.3",
    "pre-commit>=4.1.0",
    "pydantic==2.10.6",
    "pydantic-core==2.27.2",
    "pypdf==5.3.0",
    "ruff==0.9.7",
    "sniffio==1.3.1",
    "tqdm==4.67.1",
    "typing-extensions==4.12.2",
]

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
